# CalculatorApp

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
api_test/: test_api.py
app/api/: calc_api.py
app/service/: core.py
app/utils/: exceptions.py  logger.py
func_tests/: test_core.py
