[project]
name = "calculator_project"
version = "1.0.0"
description = "A FastAPI-based calculator app with CLI and API support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Padma Dey", email = "deypadma2022@gmail.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "pytest-cov",
    "black",
    "flake8"
]

[project.scripts]
calc-api = "main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
